@@ -9,8 +9,6 @@
         </form>
     </center>
 
-    {{ app.id }}
-
     <script>
         $('#dialogbox_{{ app.id }}').dialogbox('close');
     </script>
